--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "flatpickr": "^4.6.13",
+    "gh-pages": "^4.0.0",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.5"
   },
